--- a/school/templates/school/student_list.html
+++ b/school/templates/school/student_list.html
@@ -8,15 +8,17 @@
 </h1>
 <hr>
 {% if messages %}
+<div class="alert alert-success">
 <ul class="messages">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
 </ul>
+</div>
 {% endif %}
-<ul>
+<ul class="list-group list-group-flush">
   {% for student in object_list %}
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'school:update-student' pk=student.pk %}" title="Update Student">
       <i class="bi bi-pencil"></i>
     </a>
